dist/LineScript-win64-20260616/tests/cases/compile_fail/not_non_bool.lsc
main() -> i64 do
  if not 1 do
    println(0)
  end
  return 0
end
